# usql_conf

./: .gitignore  .pre-commit-config.yaml  setup.cfg  tox.ini
tests/: __init__.py  cli_test.py
tests/mock_cwd/: .usql_conf
tests/mock_home/: .usql_conf
